--- a/admissions/app/views/gaku/admin/students/_show_table.html.slim
+++ b/admissions/app/views/gaku/admin/students/_show_table.html.slim
@@ -32,7 +32,7 @@
 
       tr
         th.btn-c2 = t('scholarship_status')
-        td =student.scholarship
+        td =student.scholarship_status
       /tr
         th.btn-c2 = t('commute_method.singular')
         td
