--- a/core/app/views/gaku/students/student_specialties/_edit.html.slim
+++ b/core/app/views/gaku/students/student_specialties/_edit.html.slim
@@ -1,8 +1,7 @@
 = modal_header t(:'student_specialty.edit')
 = modal_body do
   = remote_form_for [@student, @student_specialty] do |f|
-    = f.select :specialty_id, specialties, { :prompt => t(:'specialty.choose')}, :label => t(:'specialty.plural')
-    = f.check_box :is_major, :label => t(:'specialty.major')
+    =render 'form_fields', :f => f
     .row-fluid
       .span12
         =submit_button t(:'student_specialty.save') , :id => "submit-student-specialty-button"
