--- a/core/app/views/gaku/students/simple_grades/create.js.erb
+++ b/core/app/views/gaku/students/simple_grades/create.js.erb
@@ -1,6 +1,6 @@
-$('#index-student-simple-grades tbody').append('<%= render_js_partial("simple_grade", {:simple_grade => @simple_grade}) %>');
+$('#student-simple-grades-index tbody').append('<%= render_js_partial("simple_grade", {:simple_grade => @simple_grade}) %>');
 $('.student-simple-grades-count').html('<%= print_count(@count+1, t_simple_grade_list) %>');
-$('#student-simple-grades-list').html('<%= @student.simple_grades.pluck(:name).join(", ") %>')
+$('#student-simple-grades-list').html('<%= escape_javascript(simple_grades_show(@student.simple_grades)) %>')
 
 
 showNotice("<%= render_flash %>");
