--- a/admissions/app/views/gaku/admin/admissions/admit_student.js.erb
+++ b/admissions/app/views/gaku/admin/admissions/admit_student.js.erb
@@ -1,1 +1,3 @@
-$('tr#student-<%= @student.id %> td.manage').html('<%= t("admissions.admitted_on") + " " + @student.admitted.strftime("%d-%b-%Y") %>')
+<% @state_students.each do |student| %>
+  $('tr#student-<%= student.id %> td.status').html('<%= t("admissions.admitted_on") + " " + student.admitted.strftime("%d-%b-%Y") %>');
+<% end %>
