--- a/core/app/views/gaku/extracurricular_activities/_tabs.html.slim
+++ b/core/app/views/gaku/extracurricular_activities/_tabs.html.slim
@@ -4,7 +4,7 @@
       ul.nav.nav-tabs
         li#extracurricular-activity-students-tab.active
           a#extracurricular-activity-enrollments-tab-link data-toggle="tab" href="#extracurricular_activity_enrollments"
-            = print_count @extracurricular_activity.extracurricular_activity_enrollments.count, t(:'student.plural')
+            = print_count @extracurricular_activity.enrollments.count, t(:'student.plural')
       .tab-content
 
         #exracurricular-activity-enrollments.tab-pane.active
