--- a/core/app/views/gaku/class_groups/students/_students.html.slim
+++ b/core/app/views/gaku/class_groups/students/_students.html.slim
@@ -2,7 +2,7 @@
   = index_header do
     .pull-left
       = count_div 'class-group-enrollments-count' do
-        = print_count @class_group.class_group_enrollments.count, t_student_list
+        = print_count @class_group.enrollments.count, t_student_list
     .pull-right
       = ajax_link_to_new t(:'student.add'), student_chooser_class_group_path(:class_group_id => @class_group.id), :id => 'new-class-group-student-link'
 
@@ -16,4 +16,4 @@
           = th t(:'name')
           = th_actions 2
       tbody
-        = render :partial => 'gaku/class_groups/students/student', :collection => @class_group.class_group_enrollments, :as => 'enrollment'
+        = render :partial => 'gaku/class_groups/students/student', :collection => @class_group.enrollments, :as => 'enrollment'
