--- a/admissions/app/views/gaku/admin/admissions/_links.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_links.html.slim
@@ -3,5 +3,5 @@
 
   = ajax_link_to_new t(:'admissions.candidates.existing'), student_chooser_admin_admissions_path(:admission_period_id => @admission_period.id, :admission_method_id => @admission_method.id), :id => 'new-create-multiple-admissions-student-link', :class => 'mr-s btn btn-primary'
 
-  = button t("admissions.candidates.export"), "admissions.xls", :id => 'export-students-link', :class => 'btn'
+  = button t("admissions.candidates.export"), "admissions.xls?admission_period_id="+@admission_period.id.to_s+"&admission_method_id="+@admission_method.id.to_s, :id => 'export-students-link', :class => 'btn'
   = ajax_link_to_new "import", admin_importer_index_path(:admission_period_id => @admission_period.id, :admission_method_id => @admission_method.id)
