WIP export admissions.xls

--- a/admissions/app/views/gaku/admin/admissions/index.xls.erb
+++ b/admissions/app/views/gaku/admin/admissions/index.xls.erb
@@ -19,7 +19,7 @@
       </Row>
       <Row></Row>
       <Row></Row>
-      <% phase.admission_phase_states.each do |state| %>
+    <% phase.admission_phase_states.each do |state| %>
       <Row>
         <Cell><Data ss:Type="String"><%= t("admission_phase_states.singular") + " : " + state.name.to_s %></Data></Cell>
       </Row>
@@ -29,21 +29,34 @@
         <Cell><Data ss:Type="String"><%= t("given_name") %></Data></Cell>
         <Cell><Data ss:Type="String"><%= t("surname_reading") %></Data></Cell>
         <Cell><Data ss:Type="String"><%= t("name_reading") %></Data></Cell>
+      <% @state_records[0].admission.student.simple_grades.each do |simple_grade| %>
+        <Cell><Data ss:Type="String"><%= simple_grade.name %></Data></Cell>
+      <% end %>
+        <Cell><Data ss:Type="String"><%= t("school.singular") + "番号" %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= t("school.code") %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= t("school.name") %></Data></Cell>
       </Row>
       <% @state_records.each do |record| %>
         <% if record.admission_phase == phase && record.admission_phase_state == state %>
       <Row>
-        <Cell><Data ss:Type="String"><%= record.admission.applicant_number %></Data></Cell>
+        <Cell><Data ss:Type="Number"><%= record.admission.applicant_number %></Data></Cell>
         <Cell><Data ss:Type="String"><%= record.admission.student.surname %></Data></Cell>
         <Cell><Data ss:Type="String"><%= record.admission.student.name %></Data></Cell>
         <Cell><Data ss:Type="String"><%= record.admission.student.surname_reading %></Data></Cell>
         <Cell><Data ss:Type="String"><%= record.admission.student.name_reading %></Data></Cell>
+          <% record.admission.student.simple_grades.each do |simple_grade| %>
+        <Cell><Data ss:Type="Number"><%= simple_grade.grade %></Data></Cell>
+          <% end %>
+        <Cell><Data ss:Type="Number"><%= record.admission.student.external_school_records[0].school_id %></Data></Cell>
+          <% school = Gaku::School.find_by_id(record.admission.student.external_school_records[0].school_id) %>
+        <Cell><Data ss:Type="String"><%= school.code %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= school.name %></Data></Cell>
       </Row>
         <% end %>
       <% end %>
       <Row></Row>
       <Row></Row>
-      <% end %>
+    <% end %>
     </Table>
   </Worksheet>
   <% end %>
