--- a/admissions/app/views/gaku/admin/admissions/index.xls.erb
+++ b/admissions/app/views/gaku/admin/admissions/index.xls.erb
@@ -25,32 +25,30 @@
       </Row>
       <Row>
         <Cell><Data ss:Type="String">志願者番号</Data></Cell>
-        <Cell><Data ss:Type="String"><%= t("surname") %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= t("given_name") %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= t("surname_reading") %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= t("name_reading") %></Data></Cell>
+        <Cell><Data ss:Type="String">志願者氏名（カナ氏名）</Data></Cell>
+        <Cell><Data ss:Type="String"><%= t("school.name") %></Data></Cell>
       <% @state_records[0].admission.student.simple_grades.each do |simple_grade| %>
         <Cell><Data ss:Type="String"><%= simple_grade.name %></Data></Cell>
       <% end %>
-        <Cell><Data ss:Type="String"><%= t("school.singular") + "番号" %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= t("school.code") %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= t("school.name") %></Data></Cell>
+        <Cell><Data ss:Type="String">欠席数（２年）</Data></Cell>
+        <Cell><Data ss:Type="String">欠席数（３年）</Data></Cell>
       </Row>
       <% @state_records.each do |record| %>
         <% if record.admission_phase == phase && record.admission_phase_state == state %>
       <Row>
         <Cell><Data ss:Type="Number"><%= record.admission.applicant_number %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= record.admission.student.surname %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= record.admission.student.name %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= record.admission.student.surname_reading %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= record.admission.student.name_reading %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= record.admission.student.surname + " " + record.admission.student.name + "（" + record.admission.student.surname_reading + " " + record.admission.student.name_reading + "）" %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= Gaku::School.find_by_id(record.admission.student.external_school_records[0].school_id).name %></Data></Cell>
+          <% record.admission.specialty_applications.each do |specialty_application|  %>
+        <Cell><Data ss:Type="String"><%= specialty_application.name %></Data></Cell>
+          <% end %>
           <% record.admission.student.simple_grades.each do |simple_grade| %>
         <Cell><Data ss:Type="Number"><%= simple_grade.grade %></Data></Cell>
           <% end %>
-        <Cell><Data ss:Type="Number"><%= record.admission.student.external_school_records[0].school_id %></Data></Cell>
-          <% school = Gaku::School.find_by_id(record.admission.student.external_school_records[0].school_id) %>
-        <Cell><Data ss:Type="String"><%= school.code %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= school.name %></Data></Cell>
+          <% absences = JSON.parse(record.admission.student.external_school_records[0].data) %>
+          <% absences.each do |absence, val| %>
+        <Cell><Data ss:Type="Number"><%= val %></Data></Cell>
+          <% end %>
       </Row>
         <% end %>
       <% end %>
