--- a/core/app/views/gaku/admin/schools/campuses/_form.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/_form.html.slim
@@ -1,3 +1,3 @@
 = remote_form_for [:admin, @school, @campus] do |f|
   = f.text_field :name, :label => t(:'campus.name')
-  = buttons_for @school, :nested_id => 'admin-school-campus'
+  = buttons_for @campus, :nested_id => 'admin-school-campus'
