Remove autocomplete_filteres_students

--- a/core/app/views/gaku/shared/student_chooser/_chooser.html.slim
+++ b/core/app/views/gaku/shared/student_chooser/_chooser.html.slim
@@ -26,7 +26,7 @@
         = render 'gaku/shared/student_chooser/admission'
 
 = render 'gaku/students/students'
-/= javascript_include_tag "gaku/student_chooser"
+= javascript_include_tag "gaku/student_chooser"
 
 javascript:
   $(document).ready(function(){
