add proper id to shared student chooser view

--- a/core/app/views/gaku/shared/student_chooser/_chooser.html.slim
+++ b/core/app/views/gaku/shared/student_chooser/_chooser.html.slim
@@ -25,7 +25,8 @@
       - elsif @admission
         = render 'gaku/shared/student_chooser/admission'
 
-= render 'gaku/students/students'
+#students-index-div
+  = render 'gaku/students/students'
 = javascript_include_tag "gaku/student_chooser"
 
 javascript:
