--- a/admissions/app/views/gaku/admin/admissions/index.xls.erb
+++ b/admissions/app/views/gaku/admin/admissions/index.xls.erb
@@ -7,7 +7,6 @@
   <% @admission_method.admission_phases.each_with_index do |phase, index| %>
   <Worksheet ss:Name="<%= phase.name.to_s %>">
     <Table>
-      
       <Row>
         <Cell><Data ss:Type="String"><%= t("admission_periods.name") + " : " + @admission_period.name %></Data></Cell>
       </Row>
@@ -41,9 +40,9 @@
         <Cell><Data ss:Type="Number"><%= record.admission.applicant_number %></Data></Cell>
         <Cell><Data ss:Type="String"><%= record.admission.student.surname + " " + record.admission.student.name + "（" + record.admission.student.surname_reading + " " + record.admission.student.name_reading + "）" %></Data></Cell>
           <% i = 0; while i < 2 %>
-        <Cell><Data ss:Type="String"><%= Gaku::Specialty.find(record.admission.specialty_applications[i].specialty_id) %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= record.admission.specialty_applications[i].specialty.name %></Data></Cell>
           <% i += 1; end %>
-        <Cell><Data ss:Type="String"><%= Gaku::School.find_by_id(record.admission.student.external_school_records[0].school_id).name %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= record.admission.student.external_school_records.last.school.name %></Data></Cell>
           <% record.admission.student.simple_grades.each do |simple_grade| %>
         <Cell><Data ss:Type="Number"><%= simple_grade.grade %></Data></Cell>
           <% end %>
@@ -61,6 +60,7 @@
   </Worksheet>
   <% end %>
   
+  <% phase = @admission_method.admission_phases.first %>
   <% sheets = ["志願者番号順", "順位順", "志望コース順", "志望別（国際教養科）", "志望別（普通科）"] %>
   <% sheets.each do |sheet| %>
   <Worksheet ss:Name="受験結果：<%= sheet %>">
@@ -68,6 +68,49 @@
       <Row>
         <Cell><Data ss:Type="String">受験結果：<%= sheet %></Data></Cell>
       </Row>
+      <Row></Row>
+      <Row></Row>
+    
+    <% state = phase.admission_phase_states.first %>
+      <Row>
+        <Cell><Data ss:Type="String">志願者番号</Data></Cell>
+        <Cell><Data ss:Type="String">志願者氏名（カナ氏名）</Data></Cell>
+        <Cell><Data ss:Type="String">志望学科１</Data></Cell>
+        <Cell><Data ss:Type="String">志望学科２</Data></Cell>
+        <Cell><Data ss:Type="String"><%= t("school.name") %></Data></Cell>
+        
+    <% @state_records[0].admission.student.simple_grades.each do |simple_grade| %>
+        <Cell><Data ss:Type="String"><%= simple_grade.name %></Data></Cell>
+    <% end %>
+      
+        <Cell><Data ss:Type="String">欠席数（２年）</Data></Cell>
+        <Cell><Data ss:Type="String">欠席数（３年）</Data></Cell>
+      </Row>
+      
+    <% @state_records.each do |record| %>
+      <% if record.admission_phase == phase && record.admission_phase_state == state %>
+      <Row>
+        <Cell><Data ss:Type="Number"><%= record.admission.applicant_number %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= record.admission.student.surname + " " + record.admission.student.name + "（" + record.admission.student.surname_reading + " " + record.admission.student.name_reading + "）" %></Data></Cell>
+          
+        <% i = 0; while i < 2 %>
+        <Cell><Data ss:Type="String"><%= record.admission.specialty_applications[i].specialty.name %></Data></Cell>
+        <% i += 1; end %>
+        
+        <Cell><Data ss:Type="String"><%= record.admission.student.external_school_records.last.school.name %></Data></Cell>
+          
+        <% record.admission.student.simple_grades.each do |simple_grade| %>
+        <Cell><Data ss:Type="Number"><%= simple_grade.grade %></Data></Cell>
+        <% end %>
+          
+        <% absences = JSON.parse(record.admission.student.external_school_records.last.data) %>
+        <% absences.each do |absence, val| %>
+        <Cell><Data ss:Type="Number"><%= val %></Data></Cell>
+        <% end %>
+      </Row>
+      <% end %>
+    <% end %>
+
     </Table>
   </Worksheet>
   <% end %>
