--- a/admissions/app/views/gaku/admin/admissions/index.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/index.html.slim
@@ -30,3 +30,12 @@
         #new-admin-admission.hide
         #admission-phases
           = render 'gaku/admin/admissions/phases', :admission_method => @admission_method
+
+javascript:
+  $(window).bind("popstate", function(e){
+    if (!e.originalEvent.state.backTag) return;
+    var new_location = location.href;
+    var new_location1 = new_location.replace('/admissions','/admissions/change_period_method');
+    $.get(new_location1);
+  });
+  history.pushState({ backTag: true }, document.title, '')
