--- a/admissions/app/views/gaku/admin/admissions/_method.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_method.html.slim
@@ -1,16 +1,12 @@
 - if !@admission_period.nil? 
   -if !@admission_method.nil?
-    = form_tag change_admission_method_admin_admissions_path, :remote => true, :id => "change-admission-method-form" do
-      = hidden_field_tag :admission_period_id, @admission_period.id
-      = select_tag :admission_method_id, options_from_collection_for_select(admission_methods, 'id', 'name', @admission_method.id), :onchange => "$('#change-admission-method-form').submit()", :class => "span12"
+    = select_tag :admission_method_id, options_from_collection_for_select(admission_methods, 'id', 'name', @admission_method.id), :class => "span12"
   - else
     = t(:'admission_methods.no_method')
 - else
   = t(:'admission_methods.no_period')
 
-
 javascript:
-
-  $('#admission_method_id').on('change', function(){
-    history.pushState(null, document.title, '?admission_method_id='+$(this).val()+'&admission_period_id='+$('#admission_period_id').val());
+  $('#admission_method_id').on ('change', function(){
+    $.get('/admin/admissions/change_admission_method?admission_method_id='+ $(this).val()+'&admission_period_id='+$('#admission_period_id').val());
   });
