--- a/admissions/app/views/gaku/admin/admissions/_students_list.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_students_list.html.slim
@@ -12,11 +12,11 @@
         /= th_actions 140
         = th t(:'students.status')
     tbody
-      = render :partial => 'gaku/admin/admissions/student', :collection => @students.find_all { |h| h[:state_id] == state.id }.map { |i| i[:student] }, :as => 'student', :locals => { :state => state }
+      = render :partial => 'gaku/admin/admissions/student', :collection => @students.find_all { |s| s[:state_id] == state.id }.map { |i| i[:student] }, :as => 'student', :locals => { :state => state }
 
   br
   div class="change-state_#{state.id}-form change-state-form"
-    - if @students.find_all { |h| h[:state_id] == state.id }.map { |i| i[:student] }.any?
+    - if @students.find_all { |s| s[:state_id] == state.id }.map { |i| i[:student] }.any?
       = render :partial => 'gaku/admin/admissions/state_change_form', :locals => {:state => state}
 
 
