--- a/admissions/app/views/gaku/admin/admissions/index.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/index.html.slim
@@ -35,7 +35,7 @@ javascript:
   $(window).bind("popstate", function(e){
     if (!e.originalEvent.state.backTag) return;
     var new_location = location.href;
-    var new_location1 = new_location.replace('/admissions','/admissions/change_period_method');
-    $.get(new_location1);
+    var new_location_edited = new_location.replace('/admissions','/admissions/change_period_method');
+    $.get(new_location_edited);
   });
   history.pushState({ backTag: true }, document.title, '')
