--- a/core/app/views/gaku/shared/menu/_admin.html.erb
+++ b/core/app/views/gaku/shared/menu/_admin.html.erb
@@ -6,6 +6,7 @@
   <ul class="dropdown-menu">
     <li data-hook="school_details"><%= link_to t('menu.admin.school_details'), admin_school_details_path %></li>
     <li data-hook="schools"><%= link_to t('menu.admin.schools'), admin_schools_path %></li>
+    <li data-hook="grading_methods"><%= link_to t('menu.admin.grading_methods'), admin_grading_methods_path %></li>
     <li data-hook="specialties"><%= link_to t('menu.admin.specialties'), admin_specialties_path %></li>
     <li data-hook="achievement"><%= link_to t('menu.admin.achievements'), admin_achievements_path %></li>
     <li class="dropdown-submenu" data-hook="types_sub_menu">
