--- a/core/app/views/gaku/students/guardians/_form_fields.html.slim
+++ b/core/app/views/gaku/students/guardians/_form_fields.html.slim
@@ -1,12 +1,4 @@
-.row-fluid
-  .span3
-    = f.text_field :surname, :value => @student.surname, :label => surname_label
-  .span3
-    = f.text_field :name, :label => name_label
-  .span3
-    = f.text_field :surname_reading, :value => @student.surname_reading, :label => surname_reading_label
-  .span3
-    = f.text_field :name_reading, :label => name_reading_label
+= render 'gaku/shared/form_fields/person_form_fields', :f => f
 .row-fluid
   .span12
     = f.text_field :relationship, :label => t(:'guardian.relationship')
