--- a/core/app/views/gaku/shared/menu/_global.html.erb
+++ b/core/app/views/gaku/shared/menu/_global.html.erb
@@ -1,6 +1,8 @@
 <ul class="nav" id="menu">
   <li><%= link_to t(:'menu.student.plural'), students_path %></li>
 
+  <li><%= link_to t(:'menu.teacher.plural'), teachers_path %></li>
+
   <li class="dropdown" data-hook="class_groups_menu">
     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
       <%= t(:'menu.class_group.management') %>
